[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["DoMo <ericdominguezm@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.21"
psycopg2 = "^2.9.7"
bcrypt = "^4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pylint = "^2.17.5"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
